Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67582

engine/bars3drenderer.cpp:847:75: error: invalid cast from type 'QFlags<Qt::AlignmentFlag>' to type 'Qt::AlignmentFlag'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.12.0 Alpha
    • 5.12
    • Data Visualization
    • None
    • All
    • da3c5925d546282e99f13b450a674c7024fde9ed

    Description

      https://codereview.qt-project.org/#/c/225447/ Update submodules on 'dev' in qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1523289851

      http://coin/coin/api/results/qt/qtdatavis3d/3089d8a5fae5eac284178b14c217c73529fe2dea/MacOSMacOS_10_12x86_64AndroidAndroid_ANYarmv7GCCqtci-macos-10.12-x86_64-8-4efaa1Release_DisableTests_OpenGLES2/6644414bbcc8c8c843c327f528f4d0bde4550ae6/build_1523316999/log.txt.gz

      /opt/android/android-ndk-r10e/toolchains/arm-linux-androideabi-4.9/prebuilt/darwin-x86_64/bin/arm-linux-androideabi-g++ -c -D__ANDROID_API__=16 --sysroot=/opt/android/android-ndk-r10e/platforms/android-16/arch-arm/ -isystem /opt/android/android-ndk-r10e/sources/cxx-stl/gnu-libstdc++/4.9/include -isystem /opt/android/android-ndk-r10e/sources/cxx-stl/gnu-libstdc++/4.9/libs/armeabi-v7a/include -fstack-protector-strong -DANDROID -march=armv7-a -mfloat-abi=softfp -mfpu=vfp -fno-builtin-memmove -O2 -Os -mthumb -std=c++14 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -D_REENTRANT -fPIC -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_DATAVISUALIZATION_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_CORE_LIB -I. -Iglobal -Iengine -Iutils -Itheme -Iaxis -Idata -Iinput -I../../include -I../../include/QtDataVisualization -I../../include/QtDataVisualization/5.12.0 -I../../include/QtDataVisualization/5.12.0/QtDataVisualization -I/Users/qt/work/install/include -I/Users/qt/work/install/include/QtGui -I/Users/qt/work/install/include/QtCore -I.moc -I/usr/local/opt/openssl/include -I/Users/qt/work/install/mkspecs/android-g++ -o .obj/surface3dcontroller.o engine/surface3dcontroller.cpp
      engine/bars3drenderer.cpp: In member function 'void QtDataVisualization::Bars3DRenderer::drawSlicedScene()':
      engine/bars3drenderer.cpp:847:75: error: invalid cast from type 'QFlags<Qt::AlignmentFlag>' to type 'Qt::AlignmentFlag'
                                   Qt::AlignmentFlag(Qt::AlignLeft | Qt::AlignTop), true);
                                                                                 ^
      make[2]: *** [.obj/bars3drenderer.o] Error 1
      make[2]: *** Waiting for unfinished jobs....
      engine/surface3drenderer.cpp: In member function 'void QtDataVisualization::Surface3DRenderer::drawSlicedScene()':
      engine/surface3drenderer.cpp:1079:79: error: invalid cast from type 'QFlags<Qt::AlignmentFlag>' to type 'Qt::AlignmentFlag'
                                       Qt::AlignmentFlag(Qt::AlignLeft | Qt::AlignTop), true);
                                                                                     ^
      engine/surface3drenderer.cpp: In member function 'void QtDataVisualization::Surface3DRenderer::drawLabels(bool, const QtDataVisualization::Q3DCamera*, const QMatrix4x4&, const QMatrix4x4&)':
      engine/surface3drenderer.cpp:2259:70: error: invalid cast from type 'QFlags<Qt::AlignmentFlag>' to type 'Qt::AlignmentFlag'
                       alignment = Qt::AlignmentFlag(vAlignment | hAlignment);
                                                                            ^
      make[2]: *** [.obj/surface3drenderer.o] Error 1
      make[1]: *** [sub-datavisualization-make_first-ordered] Error 2
      make: *** [sub-src-make_first] Error 2
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ogoffart Olivier Goffart (Woboq GmbH)
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes