Use Qt::Alignment instead of the AlignmentFlag enum to represent flags

Because from Qt 5.12, the the right operator| is found in the Qt namespace
instead of in the global namespace.

One must still add the 'using' statement so this patch can be integrated
using a previous qtbase. But the statement can be removed once qtbase is
updated.

Task-number: QTBUG-67582
Change-Id: Ib79c4623e858988bb55a87ad4fb0c1e0ceee81cf
Reviewed-by: Liang Qi <liang.qi@qt.io>